Bug 1850672 - Standard platform font-visibility level should be applied to localized names of the family. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D188494